src/styles/footer.scss
.footer {
  background-color: rgb(0, 0, 0);
  color: white;
  display: grid;

  grid-template-columns: repeat(1, auto);
  grid-template-rows: 0.5fr 4fr 1.5fr;
  padding-bottom: 2em;
}

.social-nav {
  display: flex;
  justify-content: center;
  border: 1 solid black;
  list-style: none;
  transform: translateY(-50%);
  margin: 0 auto;
  gap: 0.7em;
}

.site_map {
  display: flex;
  justify-content: space-evenly;
  // 內容會擠在一起
  margin: 0 auto;
  max-width: 800px;
  b {
    font-size: 1em;
    font-weight: 450;
    color: rgb(255, 255, 255);

    &::after {
      content: '';
      display: block;
      width: 2em;
      height: 2px;
      background-color: rgb(240, 83, 87);
      margin-top: 5px;
    }
  }

  p {
    margin-top: 0.5em;
  }
  a {
    color: #666;
    font-size: 0.8em;
  }

  &-container {
    margin: 1em 0;
  }
}

.newsletter {
  display: grid;
  align-items: center;
  justify-content: center;
  margin: 0 auto;

  b {
    font-size: 1.15em;
    font-weight: 400;
    margin: 0 auto;
  }

  &-form {
    border: 1px solid #999;
    padding: 0;
    margin: 0.3em 0;

    input {
      background-color: black;
      color: rgb(153, 153, 153);
      font-size: 0.8em;
      padding: 7px 10px;
    }

    button {
      background-color: #efefef;
      color: #666;
      padding: 7px 10px;
      font-size: 0.9em;
      font-weight: 400;
    }
  }
}

@media screen and (max-width: 600px) {
  .site_map {
    grid-auto-flow: column;
    grid-template-columns: auto;
    grid-template-rows: auto;
  }
}

